[tool.poetry]
name = "rwalk"
version = "0.0.0"
description = "dash app random walk"
authors = ["andros21 <andrea.ros21@e.email>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.0"
numpy = "^1.26.3"
dash = "^2.15.0"
networkx = "^3.2"
gunicorn = "^21.2.0"
scipy = "^1.12.0"
dash-cytoscape = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
