[tool.poetry]
name = "rwalk"
version = "0.0.0"
description = "dash app random walk"
authors = ["andros21 <andrea.ros21@e.email>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.2"
numpy = "^2.0.1"
dash = "^2.17.1"
networkx = "^3.3"
gunicorn = "^22.0.0"
scipy = "^1.14.0"
dash-cytoscape = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
